<resources>
    <string name="app_name">GAS Sentry</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="broker">tcp://gas.mqtt.iot.bj.baidubce.com:1883</string>
    <string name="prompt_broker">Broker</string>
    <string name="prompt_user">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
